--- a/CSS/Login.css
+++ b/CSS/Login.css
@@ -12,6 +12,7 @@ and open the template in the editor.
     margin: 0;
     padding: 0;
     font-family: arial;
+    font-size: 16px;
     color:#000;
 }
 Img{
@@ -24,7 +25,6 @@ header {
     justify-content: center;
     align-item: center;
     align-content: center;
-    background: rgba(255,255,255, 1);
     order: 0;
     margin-top: 0px;
     height: 25%;
@@ -41,39 +41,73 @@ header {
     justify-content:space-around;
     align-item: stretch;
     min-height: 100%;
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#45484d+0,000000+100;Black+3D+%231 */
+
 }
 
 body {
-    background: RGBA(255,255,255, 1.0);
-        display: flex;
-    flex: 0 1 100%;
-    justify-content: center;
-    align-item: center;
-    align-content: center;
-    order: 1;
-    margin-top: 0px;
+
+
+background: linear-gradient(to bottom,  #000000 0%,#6d4a4b 50%,#000000 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+
+ display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-flex-wrap: nowrap;
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap;
+    -webkit-justify-content: flex-start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+    -webkit-align-content: stretch;
+    -ms-flex-line-pack: stretch;
+    align-content: stretch;
+    -webkit-align-items: stretch;
+    -ms-flex-align: stretch;
+    align-items: stretch;
     padding:2%;
-    height: 25%;
+    min-height:100%;
 
 }
 
 #InputElements{
+    
+
+    background:rgba(255,255,255,0.2);
+    
+   display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
-    order:1;
-    flex-direction:column;
-    flex: 0 1 100%;
-    justify-content: center;
-    align-item: center;
-    align-content: center;
-    background: rgba(255,0,255, 1);
+        flex: 0 1 100%;
+
+    
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-flex-wrap: nowrap;
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap;
+    -webkit-justify-content: flex-start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+    -webkit-align-content: stretch;
+    -ms-flex-line-pack: stretch;
+    align-content: stretch;
+    -webkit-align-items: stretch;
+    -ms-flex-align: stretch;
+    align-items: stretch;
     margin-top: 1%;
-    height: 25%;
     -webkit-align-items: center;
    align-items: center;
    -webkit-justify-content: center;
    justify-content: center;
+   
 }
 
 Input{
     width:20%;
+    height:10%;
 }
