--- a/CSS/Login.css
+++ b/CSS/Login.css
@@ -12,37 +12,18 @@ and open the template in the editor.
     margin: 0;
     padding: 0;
     font-family: arial;
-    font-size: 100px;
+    font-size: 20px;
     color:#000;
 }
-Img{
-    height:1000px;
-    width:25%;
-    -webkit-transition: all 3s ease-in; /* Firefox */
--moz-transition: all 3s ease-in; /* WebKit */
--o-transition: all 3s ease-in; /* Opera */
-transition: all 3s ease-in; /* Standard */
-}
+
 header {
     display: flex;
-    flex: 0 1 100%;
-    justify-content: start;
-    align-item: center;
-    align-content: center;
+flex:1;
+justify-content: flex-start;
     order: 0;
     margin-top: 0px;
-    min-height: 1000px;
-    
-    
--webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
-       -moz-animation: fadein 2s; /* Firefox < 16 */
-        -ms-animation: fadein 2s; /* Internet Explorer */
-         -o-animation: fadein 2s; /* Opera < 12.1 */
-            animation: fadein 2s;
-
     
 }
-
 
 body {
 
@@ -52,7 +33,6 @@ body {
     display: flex;
     -webkit-flex-direction: column;
     -ms-flex-direction: column;
-    flex-direction: column;
     -webkit-flex-wrap: nowrap;
     -ms-flex-wrap: nowrap;
     flex-wrap: nowrap;
@@ -65,47 +45,45 @@ body {
     -webkit-align-items: flex-start;
     -ms-flex-align: start;
     align-items: flex-start;
-    
-    
+
+
     background-image: URL("http://images.123hdwallpapers.com/20150518/shopping-wallpaper-1920x1080.jpg");
     background-size: 100%;
-    
-   
+
+
     padding:2%;
     min-height:100%;
 
 }
 input[type="text"]
 {
-    font-size:100px;
+    
 }
 
 
 Input{
-/* this */
-  flex: 1 auto;
+    /* this */
+    flex: 1 100%;
 
-  /* is the same as */
-  flex-grow: 1;
-  
+    /* is the same as */
+    flex-grow: 1;
 
-  /* and it leaves the flex-shrink property alone, which would be */
-  flex-grow: inherit; /* defaults to 1 */       
+
+    /* and it leaves the flex-shrink property alone, which would be */
+    flex-grow: inherit; /* defaults to 1 */       
 }
 
 #InputElements{
-    
 
-    background:rgba(255,255,255,0.2);
-    
-   display: -ms-flexbox;
+
+    background:rgba(255,255,255,0.4);
+
+    display: -ms-flexbox;
     display: -webkit-flex;
     display: flex;
-        flex: 0 1 100%;
+    flex: 0 1 100%;
+    padding:70px;
 
- 
-        padding:70px;
-    
     -webkit-flex-direction: column;
     -ms-flex-direction: column;
     flex-direction: column;
@@ -122,52 +100,59 @@ Input{
     -ms-flex-align: stretch;
     align-items: stretch;
     margin-top: 1%;
-    -webkit-align-items: start;
-   align-items: start;
-   -webkit-justify-content: start;
-   justify-content: start;
-   
+    -webkit-align-items: flex-start;
+    align-items: flex-start;
+    -webkit-justify-content: flex-start;
+    justify-content: flex-start;
+
+
+
+Img{
+    flex: 1 15%;
+    width:300;
+    heigth:150;
+    
 }
 
-@-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@-webkit-keyframesSSfadeIn { from { opacity:0; } to { opacity:1; } 
 @-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
 @keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
 
 .fade-in {
-  opacity:0;  /* make things invisible upon start */
-  -webkit-animation:fadeIn ease-in 1;  /* call our keyframe named fadeIn, use animattion ease-in and repeat it only 1 time */
-  -moz-animation:fadeIn ease-in 1;
-  animation:fadeIn ease-in 1;
+    opacity:0;  /* make things invisible upon start */
+    -webkit-animation:fadeIn ease-in 1;  /* call our keyframe named fadeIn, use animattion ease-in and repeat it only 1 time */
+    -moz-animation:fadeIn ease-in 1;
+    animation:fadeIn ease-in 1;
 
-  -webkit-animation-fill-mode:forwards;  /* this makes sure that after animation is done we remain at the last keyframe value (opacity: 1)*/
-  -moz-animation-fill-mode:forwards;
-  animation-fill-mode:forwards;
+    -webkit-animation-fill-mode:forwards;  /* this makes sure that after animation is done we remain at the last keyframe value (opacity: 1)*/
+    -moz-animation-fill-mode:forwards;
+    animation-fill-mode:forwards;
 
-  -webkit-animation-duration:2s;
-  -moz-animation-duration:2s;
-  animation-duration:2s;
+    -webkit-animation-duration:2s;
+    -moz-animation-duration:2s;
+    animation-duration:2s;
 }
 
 .fade-in.one {
-  -webkit-animation-delay: 1.0 s;
-  -moz-animation-delay: 1.0 s;
-  animation-delay: 1.0 s;
+    -webkit-animation-delay: 1.0 s;
+    -moz-animation-delay: 1.0 s;
+    animation-delay: 1.0 s;
 }
 
 .fade-in.two {
-  -webkit-animation-delay: 3s;
-  -moz-animation-delay:3s;
-  animation-delay: 3s;
+    -webkit-animation-delay: 2s;
+    -moz-animation-delay:2s;
+    animation-delay: 2s;
 }
 
 .fade-in.three {
-  -webkit-animation-delay: 1.6s;
-  -moz-animation-delay: 1.6s;
-  animation-delay: 1.6s;
+    -webkit-animation-delay: 1.6s;
+    -moz-animation-delay: 1.6s;
+    animation-delay: 1.6s;
 }
 
 /*---make a basic box ---*/
 
 
 /*This Containter contains and organizes the fundamental structure of the webpage
-	contains: Header, Nav,Mainsection footer etc. */
+        contains: Header, Nav,Mainsection footer etc. */
