css update new Product

--- a/CSS/customCSS.css
+++ b/CSS/customCSS.css
@@ -1,4 +1,8 @@
 
+*{
+    padding:5px;
+}
+
 .jumbotron{
     padding:0;
   
@@ -10,6 +14,8 @@
            background-repeat: no-repeat;
            background-size:cover;
 }
+
+
 
 .nav{
 color:white;
