--- a/CSS/customCSS.css
+++ b/CSS/customCSS.css
@@ -33,64 +33,27 @@ label{
 }
 .btn-primary{
 
-    color: #ffffff;
-    padding: 5px 10px;
-    margin-bottom:5px;
-    margin-top:5px;
-    background: -moz-linear-gradient(
-        top,
-        #ff2819 0%,
-        #ab0000);
-    background: -webkit-gradient(
-        linear, left top, left bottom,
-        from(#ff2819),
-        to(#ab0000));
-    -moz-border-radius: 0px;
-    -webkit-border-radius: 0px;
-    border-radius: 0px;
-    border: 1px solid #7d0000;
-    -moz-box-shadow:
-        0px 1px 3px rgba(000,000,000,0),
-        inset 0px 0px 2px rgba(255,255,255,0);
-    -webkit-box-shadow:
-        0px 1px 3px rgba(000,000,000,0),
-        inset 0px 0px 2px rgba(255,255,255,0);
-    box-shadow:
-        0px 1px 3px rgba(000,000,000,0),
-        inset 0px 0px 2px rgba(255,255,255,0);
+    -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0px;
+  -webkit-box-shadow: 0px 1px 3px #473247;
+  -moz-box-shadow: 0px 1px 3px #473247;
+  box-shadow: 0px 1px 3px #473247;
+  color: #ffffff;
+  background: #ba4e4e;
+  padding: 10px 20px 10px 20px;
+  border: solid #000000 0px;
+  text-decoration: none;
 
 }
 
 .btn-primary:hover {
-    color: #ffffff;
-    padding: 5px 10px;
-    margin-bottom:5px;
-    margin-top:5px;
-    background: -moz-linear-gradient(
-        top,
-        #ff2819 0%,
-        #000);
-    background: -webkit-gradient(
-        linear, left top, left bottom,
-        from(#ff2819),
-        to(#000));
-    -moz-border-radius: 0px;
-    -webkit-border-radius: 0px;
-    border-radius: 0px;
-    border: 1px solid #7d0000;
-    -moz-box-shadow:
-        0px 1px 3px rgba(000,000,000,0),
-        inset 0px 0px 2px rgba(255,255,255,0);
-    -webkit-box-shadow:
-        0px 1px 3px rgba(000,000,000,0),
-        inset 0px 0px 2px rgba(255,255,255,0);
-    box-shadow:
-        0px 1px 3px rgba(000,000,000,0),
-        inset 0px 0px 2px rgba(255,255,255,0);}
+  background: #bd8282;
+  text-decoration: none;
+}
 
 
 .whiteBox{
-
     background-color:rgba(255, 255, 255, 0.6);
     padding:30px;
 }
@@ -98,7 +61,6 @@ label{
 vertical-center {
     min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
     min-height: 100vh; /* These two lines are counted as one :-)       */
-
     display: flex;
     align-items: center;
 }
